opam-version: "2.0"
name:         "mirage-entropy-nocrypto"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/mirage/mirage-entropy-nocrypto"
bug-reports:  "https://github.com/mirage/mirage-entropy-nocrypto/issues"
dev-repo:     "git+https://github.com/mirage/mirage-entropy-nocrypto.git"
doc:          "https://mirage.github.io/mirage-entropy-nocrypto/"
license:      "MIT"
synopsis:     "Entropy engine with nocrypto"
description: """Entropy engine with nocrypto
"""

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml"      {>= "4.07.0"}
  "dune"
  "nocrypto"
  "mirage-random"
  "mirage-entropy"
  "mirage-os-shim"
]
